# Craftalyst-Backend

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
migrations/2020-02-03-001729_create_minecrafters/: down.sql  up.sql
migrations/2020-02-17-004536_create_steam_table/: down.sql  up.sql
migrations/2020-04-26-180430_add_suspensions/: down.sql  up.sql
src/: main.rs  schema.rs
src/commands/: mclink.rs  mcunlink.rs  mod.rs
src/constants/: mod.rs
src/guards/: discord.rs  mod.rs  mojang.rs
src/models/: mod.rs
src/routes/: login.rs  mod.rs  refresh.rs  register.rs  status.rs
src/sql/: mod.rs
src/structs/: config.rs  mod.rs  mojang.rs  steam.rs
