[package]
name = "craftalyst"
version = "3.0.0-next"
authors = ["Kai Zurowski <Dunklheit@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
csv = "1.1"
dotenv = "0.15"
diesel = { version = "1.0", features = ["mysql", "r2d2"] }
parking_lot = "0.10"
rand = "0.7.3"
reqwest = { version = "0.10", features = ["json"] }
rocket = { version = "0.4", features = ["tls"] }
rocket_contrib = { version = "0.4", default-features = false, features = ["diesel_mysql_pool", "json"] }
rocket_cors = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
serenity = { version = "0.8", default-features = false, features = ["default_native_tls"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
uuid = "0.8"
